# a2a

a2a_samples/: README.md
a2a_samples/adk/: pyproject.toml
a2a_samples/adk/agents/google_adk/: __main__.py  agent.py  task_manager.py
a2a_samples/adk/app/cmd/: cmd.py
a2a_samples/adk/client/: client.py
a2a_samples/adk/models/: agent.py  json_rpc.py  request.py
a2a_samples/adk/server/: server.py  task_manager.py
a2a_samples/client/: time_client.py
a2a_samples/server/: tell_time_server.py
